@@ -24,14 +24,11 @@ be found at http://www.openstreetmap.org/ .
 == Dependencies
 
 * georuby
-* libxml-ruby (for XML parsing)
+* libxml-ruby (optional fast XML parser, needs reasonably new version)
 
 Dependencies are not all installed automatically when installing the gem
 packages because this breaks when the packages are already installed as
 Debian packages.
-
-You need a reasonably new version of libxml-ruby. The one in Ubuntu 7.10 is
-too old.
 
 For Debian/Ubuntu install the following packages:
 * libbuilder-ruby1.8
